--- a/src/app/subjects/subject-edit.component.scss
+++ b/src/app/subjects/subject-edit.component.scss
@@ -5,3 +5,18 @@
   height: 80%;
   width: 90%;
 }
+
+.delete-button {
+  position: absolute;
+  right: 0;
+}
+
+.edit-save-button {
+  position: absolute;
+  right: 2.5rem;
+}
+
+.edit-field {
+  width: 40%;
+  margin-right: 2rem;
+}
