added general confirm dialog + minor improvements

--- a/src/app/subjects/subject-create.component.html
+++ b/src/app/subjects/subject-create.component.html
@@ -1,14 +1,12 @@
-<h2>Fach erstellen</h2>
+<h2 mat-dialog-title>Fach erstellen</h2>
 
 <form [formGroup]="createSubjectForm" (submit)="onSubmit()">
-  <mat-form-field>
+  <mat-form-field style="width: 30rem">
     <input [formControlName]="'name'" matInput placeholder="Name">
     <mat-error *ngIf="createSubjectForm.controls.name.errors?.required">Du musst einen Namen angeben</mat-error>
   </mat-form-field>
-  <div class="button-container-outer">
-    <div class="button-container-inner">
-      <button mat-raised-button type="button" (click)="onAbort()">Abbrechen</button>
-      <button mat-raised-button color="primary" type="submit">Fach erstellen</button>
-    </div>
-  </div>
+  <mat-dialog-actions>
+    <button mat-raised-button type="button" (click)="onAbort()">Abbrechen</button>
+    <button mat-raised-button color="primary" type="submit">Fach erstellen</button>
+  </mat-dialog-actions>
 </form>
