--- a/src/app/subjects/subject-detail.component.scss
+++ b/src/app/subjects/subject-detail.component.scss
@@ -8,13 +8,11 @@
 .inner-container {
   display: flex;
   justify-content: space-between;
-  height: 10%;
   width: 70%;
 }
 
 .card {
   width: 30%;
-  height: 80%;
   cursor: pointer;
   text-align: center;
 
@@ -24,6 +22,11 @@
 
   &:focus {
     outline: none;
+  }
+
+  &:hover {
+    transition: opacity 0.2s ease;
+    opacity: 0.7;
   }
 }
 
