--- a/src/app/subjects/subject-edit.component.html
+++ b/src/app/subjects/subject-edit.component.html
@@ -9,7 +9,7 @@
     <h2>Fächer</h2>
     <mat-accordion [multi]="false">
       <ng-container *ngFor="let tray of trays">
-        <mat-expansion-panel *ngIf="tray" [expanded]="true">
+        <mat-expansion-panel *ngIf="tray" [expanded]="tray === trays[0]">
           <mat-expansion-panel-header>
             <mat-panel-title>{{tray.name}}</mat-panel-title>
             <mat-panel-description>
@@ -40,7 +40,7 @@
             </ng-template>
           </ng-template>
 
-          <mat-action-row>
+          <mat-action-row *ngIf="tray !== trays[0]">
             <button mat-raised-button color="warn" matTooltip="Fach zurücksetzen" (click)="resetTray(tray)">
               <mat-icon>undo</mat-icon>
               Zurücksetzen
