--- a/src/app/subjects/subject-learn.component.html
+++ b/src/app/subjects/subject-learn.component.html
@@ -1,36 +1,47 @@
 <div class="card-container-outer">
   <div class="card-container-inner">
     <mat-card class="card">
-      <mat-card-header>
-        <mat-card-title class="learn-card-title">{{subject.trays[currentTrayIndex].name}}</mat-card-title>
-        <!--<mat-card-subtitle class="learn-card-subtitle">Karte / 20</mat-card-subtitle>-->
-      </mat-card-header>
-      <mat-card-content>
-        <p class="learn-card-content" *ngIf="!showAnswer; else solution">
-          {{currentCard.question}}
-        </p>
-        <ng-template #solution>
-          <span>Lösung</span>
-          <p>
-            {{currentCard.answer}}
+      <ng-container *ngIf="currentCard; else subjectComplete">
+        <mat-card-header>
+          <mat-card-title class="learn-card-title">{{subject.trays[currentTrayIndex].name}}</mat-card-title>
+          <!--<mat-card-subtitle class="learn-card-subtitle">Karte / 20</mat-card-subtitle>-->
+        </mat-card-header>
+        <mat-card-content>
+          <p class="learn-card-content" *ngIf="!showAnswer; else solution">
+            {{currentCard.question}}
           </p>
-        </ng-template>
-      </mat-card-content>
-      <mat-card-actions>
-        <form [formGroup]="answerForm" (submit)="answerSubmitted()" *ngIf="!showAnswer; else solutionForm">
-          <div>
-            <mat-form-field class="learn-card-answer-edit-field">
-              <input matInput formControlName="answer" placeholder="Antwort">
-            </mat-form-field>
-          </div>
-          <!--<button mat-raised-button type="button" (click)="skipCard()">Überspringen</button>-->
-          <button mat-raised-button color="primary" type="submit">Beantworten</button>
-        </form>
-        <ng-template #solutionForm>
-          <button mat-raised-button type="button" (click)="answerReviewed(false)">Falsch</button>
-          <button mat-raised-button color="primary" type="button" (click)="answerReviewed(true)">Richtig</button>
-        </ng-template>
-      </mat-card-actions>
+          <ng-template #solution>
+            <span>Lösung</span>
+            <p>
+              {{currentCard.answer}}
+            </p>
+          </ng-template>
+        </mat-card-content>
+        <mat-card-actions>
+          <form [formGroup]="answerForm" (submit)="answerSubmitted()" *ngIf="!showAnswer; else solutionForm">
+            <div>
+              <mat-form-field class="learn-card-answer-edit-field">
+                <input matInput formControlName="answer" placeholder="Antwort">
+              </mat-form-field>
+            </div>
+            <!--<button mat-raised-button type="button" (click)="skipCard()">Überspringen</button>-->
+            <button mat-raised-button color="primary" type="submit">Beantworten</button>
+          </form>
+          <ng-template #solutionForm>
+            <button mat-raised-button type="button" (click)="answerReviewed(false)">Falsch</button>
+            <button mat-raised-button color="primary" type="button" (click)="answerReviewed(true)">Richtig</button>
+          </ng-template>
+        </mat-card-actions>
+      </ng-container>
+      <ng-template #subjectComplete>
+        <mat-card-content style="text-align: center">
+          <h2>Alles gelernt</h2>
+          <p>
+            Du warst fleißig und hast alles gelernt. Du kannst in den <a [routerLink]="['../edit']">Einstellungen</a> deinen Lernfortschritt zurücksetzen,
+            falls du von vorne beginnen möchtest.
+          </p>
+        </mat-card-content>
+      </ng-template>
     </mat-card>
   </div>
 </div>
